--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                 </a>
                 
-                <a href="./consultarAgendamento.php">
+                <a href="./consultarAgendamentoTabela.php">
                     <div class="op" onmouseover="trocaImg('search','./img/search-blue.png');" onmouseout="trocaImg('search','./img/search-black.png');">
                         <div class="img">
                             <i><img id="search" src="./img/search-black.png" alt="Search"></i>
